--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white;
+  min-height: 100vh;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
