--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,27 @@
+:root {
+  --color-1: #0b132b;
+  --color-2: #1c2541;
+  --color-3: #3a506b;
+  --color-4: #5bc0be;
+  --color-5: #6fffe9;
+}
+
 .App {
   text-align: center;
-  background-color: #282c34;
-  color: white;
+  background-color: var(--color-1);
+  color: var(--color-4);
   min-height: 100vh;
 }
 
 .App-header {
-  background-color: #000000;
+  background-color: var(--color-3);
   min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--color-2);
+  border-top: 5px solid var(--color-4);
+  border-bottom: 5px solid var(--color-4);
 }
