Added basic spacing and topics

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 
 p {
   color: var(--body-text);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 50rem;
 }
 
 .App-header {
@@ -25,6 +28,8 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  display: grid;
+  grid-template-columns: 2fr 2fr 6fr 2fr;
   color: var(--header-text);
   border-bottom: 1px solid var(--body-header);
 }
