--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,32 @@
   min-height: 100vh;
 }
 
+form {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+}
+input,
+textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+button {
+  width: 100%;
+  background-color: #a7cdfb;
+  color: #022b3a;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 p {
   text-align: left;
   color: var(--body-text);
