--- a/src/App.css
+++ b/src/App.css
@@ -76,13 +76,16 @@ img {
   cursor: pointer;
 }
 /* Contact */
-
+.center {
+  text-align: center;
+}
 input,
 textarea {
   width: 100%;
+  max-width: 500px;
   padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
+  margin: 8px auto;
+  display: block;
   border: 1px solid #ccc;
   background-color: #022b3a;
   border-radius: 4px;
@@ -90,10 +93,11 @@ textarea {
 }
 button {
   width: 100%;
+  max-width: 500px;
+  padding: 12px 20px;
+  margin: 8px auto;
   background-color: #a7cdfb;
   color: #022b3a;
-  padding: 14px 20px;
-  margin: 8px 0;
   border: none;
   border-radius: 4px;
   cursor: pointer;
