--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --header-text: #a7cdfb;
   --body-text: #d2e7fe;
   --body-header: #ffffff;
+  --hover: #fa9d64;
 }
 
 @media screen and (max-width: 766px) {
@@ -15,27 +16,52 @@
   background-color: var(--body-bg);
   color: var(--body-header);
   min-height: 100vh;
+  font-size: 1.5em;
+}
+.center {
+  text-align: center;
+}
+.left {
+  text-align: left;
+}
+.right {
+  text-align: right;
+}
+.clickable {
+  cursor: pointer;
+}
+.clickable:hover {
+  color: var(--hover);
 }
 
 .App-header {
   background-color: var(--header-bg);
-  min-height: 10vh;
+  min-height: 7%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  display: grid;
-  grid-template-columns: 2fr 2fr 6fr 2fr;
   color: var(--header-text);
   border-bottom: 1px solid var(--body-header);
+}
+.header-block {
+  display: grid;
+  grid-template-columns: 2fr 2fr 6fr 2fr;
+  width: 70%;
+  max-width: 1500px;
 }
 
 .outerblock {
   margin-left: auto;
   margin-right: auto;
-  max-width: 80%;
+  width: 70%;
+  max-width: 1500px;
 }
 
+/* Header */
+h3 {
+  font-size: 1.2rem;
+}
 /* About */
 p {
   text-align: left;
@@ -57,9 +83,10 @@ p {
   width: 100%;
 }
 img {
-  max-width: 80%;
+  width: 80%;
+  max-width: 500px;
   border: 1px solid #ddd;
-
+  margin: 5% auto;
   padding: 5px;
 }
 
@@ -69,20 +96,21 @@ img {
   background-color: #a7cdfb;
   text-decoration: none;
   color: #022b3a;
-  padding: 14px 20px;
+  padding: 10px 20px;
   margin: 8px 8px;
   border: 2px solid #022b3a;
   border-radius: 4px;
   cursor: pointer;
 }
-/* Contact */
-.center {
-  text-align: center;
+.button:hover {
+  background-color: var(--hover);
 }
+/* Contact */
+
 input,
 textarea {
   width: 100%;
-  max-width: 500px;
+  max-width: 750px;
   padding: 12px 20px;
   margin: 8px auto;
   display: block;
@@ -93,7 +121,7 @@ textarea {
 }
 button {
   width: 100%;
-  max-width: 500px;
+  max-width: 750px;
   padding: 12px 20px;
   margin: 8px auto;
   background-color: #a7cdfb;
@@ -101,6 +129,9 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+button:hover {
+  background-color: var(--body-text);
 }
 /* Footer */
 .footer {
