--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,8 @@
 
 /* Header */
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
+  margin: 20px 10px;
 }
 /* About */
 p {
@@ -95,18 +96,19 @@ p {
   color: var(--body-text);
   margin-left: auto;
   margin-right: auto;
+  font-size: 1.1rem;
 }
 
 /* Projects */
 h1 {
   margin: 15px;
+  font-size: 2.5rem;
 }
 h2 {
   margin: 10px;
+  font-size: 1.75rem;
 }
-h3 {
-  margin: 10px;
-}
+
 .half {
   display: inline-block;
   width: 100%;
@@ -169,10 +171,11 @@ button:hover {
 .footer {
   position: relative;
   padding: 10px;
-  margin: 0;
+  margin: auto;
   left: 0;
+  justify-content: center;
   bottom: 0;
-  width: 100%;
+  width: 90%;
   color: #d2e7fe;
   text-align: center;
 }
