Adjusted title/description/about/favicon and fixed file location error.

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ h3 {
 }
 /* About */
 p {
-  text-align: left;
+  text-align: justify;
   color: var(--body-text);
   margin-left: auto;
   margin-right: auto;
