--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --body-text: #d2e7fe;
   --body-header: #ffffff;
   --hover: #fa9d64;
+  --error: #fca160;
 }
 
 @media screen and (max-width: 1000px) {
@@ -141,7 +142,18 @@ img {
 }
 /* Contact */
 
-input,
+input {
+  width: 100%;
+  max-width: 750px;
+  padding: 12px 20px;
+  margin: 8px auto;
+  display: block;
+  border: 1px solid #ccc;
+  background-color: #022b3a;
+  color: var(--body-header);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 textarea {
   width: 100%;
   max-width: 750px;
@@ -150,8 +162,10 @@ textarea {
   display: block;
   border: 1px solid #ccc;
   background-color: #022b3a;
+  color: var(--body-header);
   border-radius: 4px;
   box-sizing: border-box;
+  height: 100px;
 }
 button {
   width: 100%;
@@ -166,6 +180,18 @@ button {
 }
 button:hover {
   background-color: var(--body-text);
+}
+.error {
+  color: var(--error);
+  margin: 0;
+  padding: 0;
+  font-size: 1.1rem;
+}
+.success {
+  color: var(--error);
+  margin: 0;
+  padding: 0;
+  font-size: 1.1rem;
 }
 /* Footer */
 .footer {
