--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -92,12 +92,24 @@
   margin: 20px 10px;
 }
 /* About */
-.Portfolio p {
+.Portfolio .about p {
   text-align: justify;
   color: var(--body-text);
   margin-left: auto;
   margin-right: auto;
   font-size: 1.1rem;
+}
+
+.Portfolio .about a {
+  text-decoration: none;
+  color: var(--header-text);
+  /* font-weight: bold; */
+}
+
+.Portfolio .about a:hover {
+  /* text-decoration: none; */
+  text-decoration: underline;
+  color: var(--error);
 }
 
 /* Projects */
