Minor typos and metadata fixes

--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -230,6 +230,7 @@
 .Portfolio .footer {
   position: relative;
   padding: 10px;
+  font-size: 1.1rem;
   margin: auto;
   left: 0;
   justify-content: center;
