Add recaptcha on backend, add catch for fails

--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -223,7 +223,8 @@
   padding: 0;
   font-size: 1.1rem;
 }
-.Portfolio .success {
+.Portfolio .success,
+.Portfolio .failed {
   color: var(--error);
   margin: 0;
   padding: 0;
